// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Image alt=undefined 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image className="my-classname" 1`] = `
<img
  alt=""
  className="uu5-bricks-image my-classname uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image controlled=false 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image controlled=true 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image default props 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image disabled=false 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image disabled=true 1`] = `
<div
  className="uu5-common-disabled-cover-wrapper"
>
  <img
    alt=""
    className="uu5-bricks-image uu5-common-disabled uu5-bricks-image-responsive"
    id="uuID"
    src=""
    style={Object {}}
    title={null}
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Image docKit examples UU5.Bricks.Image should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID04"
  style={Object {}}
  title={null}
>
  <Image
    id="uuID03"
    key="uuID03"
    src="https://unicorn.com/img/images/news/n2016110401/image-presov-index.jpg"
    style={
      Object {
        "width": 200,
      }
    }
    type="rounded"
  />
  <Image
    id="uuID02"
    key="uuID02"
    src="https://unicorn.com/img/images/news/n2016110401/image-presov-index.jpg"
    style={
      Object {
        "width": 200,
      }
    }
    type="circle"
  />
  <Image
    id="uuID01"
    key="uuID01"
    src="https://unicorn.com/img/images/news/n2016110401/image-presov-index.jpg"
    style={
      Object {
        "width": 200,
      }
    }
    type="thumbnail"
  />
</div>
`;

exports[`UU5.Bricks.Image docKit examples UU5.Bricks.Image should render without crash 2`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Row
    id="uuID02s"
    key="uuID02s"
  >
    <Column
      colWidth="xs12 s3"
      header="src"
      id="uuID03"
    >
      <Image
        id="uuID04"
        src="https://images.pexels.com/photos/371794/pexels-photo-371794.jpeg?"
      />
    </Column>
    <Column
      colWidth="xs12 s3"
      header="alt"
      id="uuID05"
    >
      <Image
        id="uuID06"
        name="Image description"
        src="https://images.pexels.com/photos/371794/pexels-photo-371794.jpegchyba?"
      />
    </Column>
  </Row>
  <Row
    header="type"
    id="uuID07"
    key="uuID07"
  >
    <Column
      colWidth="xs12 s4"
      header="rounded"
      id="uuID08"
    >
      <Image
        id="uuID09"
        src="https://images.pexels.com/photos/316093/pexels-photo-316093.jpeg?w=940&h=650"
        type="rounded"
      />
    </Column>
    <Column
      colWidth="xs12 s4"
      header="circle"
      id="uuID010"
    >
      <Image
        id="uuID011"
        src="https://images.pexels.com/photos/316093/pexels-photo-316093.jpeg?w=940&h=650"
        type="circle"
      />
    </Column>
    <Column
      colWidth="xs12 s4"
      header="thumbnail"
      id="uuID012"
    >
      <Image
        id="uuID013"
        src="https://unicorn.com/img/images/news/n2016110401/image-presov-index.jpg"
        type="thumbnail"
      />
    </Column>
  </Row>
  <Row
    id="uuID014"
    key="uuID014"
  >
    <Column
      colWidth="xs12 s4"
      header="responsive={true}"
      id="uuID015"
    >
      <Image
        id="uuID016"
        src="https://images.pexels.com/photos/371794/pexels-photo-371794.jpeg?"
      />
    </Column>
    <Column
      colWidth="xs12 s4"
      header="responsive={false}"
      id="uuID07"
    >
      <Image
        id="uuID018"
        responsive={false}
        src="https://images.pexels.com/photos/316093/pexels-photo-316093.jpeg?w=500&h=650"
      />
    </Column>
  </Row>
</div>
`;

exports[`UU5.Bricks.Image height="50px" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={
    Object {
      "height": "50px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Image height=40 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={
    Object {
      "height": 40,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Image height=null 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image hidden=false 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image hidden=true 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-common-hidden uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image id="myId" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="myId"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image mainAttrs=undefined 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image name="myName" 1`] = `
<img
  alt="myName"
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  name="myName"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image nestingLevel="bigBox" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image nestingLevel="bigBoxCollection" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image nestingLevel="box" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image nestingLevel="boxCollection" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image nestingLevel="container" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image nestingLevel="inline" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "alt": undefined,
        "authenticate": false,
        "borderRadius": null,
        "className": null,
        "controlled": true,
        "disabled": false,
        "elevation": null,
        "height": undefined,
        "hidden": false,
        "id": "uuID",
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "inline",
        "noIndex": false,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "responsive": true,
        "selected": false,
        "src": "",
        "style": null,
        "tooltip": null,
        "type": null,
        "width": undefined,
      },
      "refs": Object {},
      "state": Object {
        "disabled": false,
        "hidden": false,
        "nestingLevel": null,
        "preloadedUri": null,
        "preloading": false,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Image",
    }
  }
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Obrázek",
          "en": "Image",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Obrázek",
          "en": "Image",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalProps={
    Object {
      "size": "auto",
    }
  }
/>
`;

exports[`UU5.Bricks.Image nestingLevel="page" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image nestingLevel="smallBox" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "alt": undefined,
        "authenticate": false,
        "borderRadius": null,
        "className": null,
        "controlled": true,
        "disabled": false,
        "elevation": null,
        "height": undefined,
        "hidden": false,
        "id": "uuID",
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "smallBox",
        "noIndex": false,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "responsive": true,
        "selected": false,
        "src": "",
        "style": null,
        "tooltip": null,
        "type": null,
        "width": undefined,
      },
      "refs": Object {},
      "state": Object {
        "disabled": false,
        "hidden": false,
        "nestingLevel": null,
        "preloadedUri": null,
        "preloading": false,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Image",
    }
  }
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Obrázek",
          "en": "Image",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Obrázek",
          "en": "Image",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalProps={
    Object {
      "size": "auto",
    }
  }
/>
`;

exports[`UU5.Bricks.Image nestingLevel="smallBoxCollection" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "__isMounted": true,
      "_isMounted": true,
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
      ],
      "props": Object {
        "alt": undefined,
        "authenticate": false,
        "borderRadius": null,
        "className": null,
        "controlled": true,
        "disabled": false,
        "elevation": null,
        "height": undefined,
        "hidden": false,
        "id": "uuID",
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "smallBoxCollection",
        "noIndex": false,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "responsive": true,
        "selected": false,
        "src": "",
        "style": null,
        "tooltip": null,
        "type": null,
        "width": undefined,
      },
      "refs": Object {},
      "state": Object {
        "disabled": false,
        "hidden": false,
        "nestingLevel": null,
        "preloadedUri": null,
        "preloading": false,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Image",
    }
  }
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Obrázek",
          "en": "Image",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Obrázek",
          "en": "Image",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalProps={
    Object {
      "size": "auto",
    }
  }
/>
`;

exports[`UU5.Bricks.Image nestingLevel="spa" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image noIndex=false 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image noIndex=true 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-noindex uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image pureRender=false 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image pureRender=true 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image responsive=false 1`] = `
<img
  alt=""
  className="uu5-bricks-image"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image responsive=true 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image selected=false 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image selected=true 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-common-selected uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image src=undefined 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image style="padding:8px; borderRadius: 2px" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Image style={"backgroundColor":"red","color":"blue"} 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Image tooltip="My Tooltip" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title="My Tooltip"
/>
`;

exports[`UU5.Bricks.Image type="circle" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-circle uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image type="rounded" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-rounded uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image type="thumbnail" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-thumbnail uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Image width="50px" 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={
    Object {
      "width": "50px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Image width=40 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={
    Object {
      "width": 40,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Image width=null 1`] = `
<img
  alt=""
  className="uu5-bricks-image uu5-bricks-image-responsive"
  id="uuID"
  src=""
  style={Object {}}
  title={null}
/>
`;
